fix global search nav item spacing

--- a/src/main/webapp/app/core/navbar/global-search/components/global-search-navbar.component.scss
+++ b/src/main/webapp/app/core/navbar/global-search/components/global-search-navbar.component.scss
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     height: 100%;
+    padding-right: 0.5rem;
 }
 
 .search-trigger {
